<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">WELCOME</string>
    <string name="introduction">Shoestore is a fashionable, comfort, and trendy footwear Brand, with a quality and affordable prices, aims to inspire with the latest fashion trends. \n Encompassing a distinct contemporary and modem style, providing a large variety of ladies shoes and bags. \n Each collection illustrates our commitment to balancing essential pieces with the season\'s iconic trends, always maintaining a focus on wear ability, quality and style</string>
    <string name="lets_start">Lets Start</string>
    <string name="watch_instruction">1)WATCH: \n you can take look for any shoe you loved and see it information</string>
    <string name="add_instruction">2)ADD: \n you can add any shoe you want to store</string>
    <string name="fun_instruction">3)FUN: lets have fun!!!!!</string>
    <string name="instruction_button">Go To Instruction</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="shoe_name">shoe name</string>
    <string name="company_name">company name</string>
    <string name="shoe_size">shoe size</string>
    <string name="description">Description</string>
    <string name="aboutus">AboutUs</string>


</resources>